Complete XVF shadow capture reliability